--- a/vignettes/AirDAS_format.Rmd
+++ b/vignettes/AirDAS_format.Rmd
@@ -22,9 +22,10 @@ library(swfscAirDAS)
 ```
 
 
-See below for format requirements for AirDAS data expected by this package. In addition, you can view the pdf located at the following location:
-```{r}
-system.file("AirDAS_Format.pdf", package = "swfscAirDAS")
+See below for the AirDAS data format required by this package. In addition, you can use `airdas_format_copy` to save the pdf describing the format requirements to a location of your choice:
+```{r, eval=FALSE}
+# Code not run
+airdas_format_copy("your_filepath_here.pdf")
 ```
 
 ```{r}
