--- a/README.Rmd
+++ b/README.Rmd
@@ -62,3 +62,13 @@ To read in and concatenate mutliple AirDAS files, currently you can use the foll
 ```{r, eval = FALSE}
 y.proc <- do.call(rbind, lapply(list.files("filepath/to/airdas_file_folder", full.names = TRUE), airdas_read))
 ```
+
+## Vignettes
+```r
+# To see the list of available vignettes
+browseVignettes("swfscAirDAS") 
+
+# To open a specific vignette
+vignette("AirDAS_format")
+```
+* AirDAS data format requirements ([AirDAS_format](https://github.com/smwoodman/swfscAirDAS/blob/master/vignettes/AirDAS_format.Rmd))
