Removed vignette due to png display issues on pkgdown site; added links to download format pdf

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,8 +30,14 @@ You can install swfscAirDAS from [GitHub](https://github.com/smwoodman/swfscAirD
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("smwoodman/swfscAirDAS", build_vignettes = TRUE)
+devtools::install_github("smwoodman/swfscAirDAS")
 ```
+
+## AirDAS format
+
+You can download a pdf describing the [AirDAS data format
+requirements](https://github.com/smwoodman/swfscAirDAS/blob/master/inst/AirDAS_Format.pdf)
+of `swfscAirDAS`.
 
 ## Usage
 
@@ -64,15 +70,3 @@ To read in and concatenate mutliple AirDAS files, currently you can use the foll
 ```{r, eval = FALSE}
 y.proc <- do.call(rbind, lapply(list.files("filepath/to/airdas_file_folder", full.names = TRUE), airdas_read))
 ```
-
-## Vignettes
-
-```r
-# To see the list of available vignettes
-browseVignettes("swfscAirDAS") 
-
-# To open a specific vignette
-vignette("AirDAS_format")
-```
-
-* AirDAS data format requirements ([AirDAS_format](https://github.com/smwoodman/swfscAirDAS/blob/master/vignettes/AirDAS_format.Rmd))
