--- a/README.Rmd
+++ b/README.Rmd
@@ -61,14 +61,13 @@ Note that `airdas_read` can read multiple files simultaneously
 y.read.mult <- airdas_read(c(y, y))
 ```
 
-Then you can summarize the processed AirDAS data
+After processing, you can summarize the processed AirDAS data. There are two available methods for chopping and summarizing effort: "equallength" and "condition". The method "equallength" chops continuous effort sections into equal length effort (modeling) segments, while the method "condition" chops continuous effort sections in segments every time a condition changes. 
 
 ```{r}
 # Summarize sighting information
 y.sight <- airdas_sight(y.proc)
 
-# Chop continuous effort sections into equal length effort (modeling) segments, 
-#   and get summary information for each segment
+# Chop and summarize effort using "equallength" method
 y.eff <- airdas_effort(
   y.proc, method = "equallength", sp.codes = c("mn", "bm"), 
   seg.km = 3, randpicks.load = y.eff.randpicks
@@ -76,6 +75,12 @@ y.eff <- airdas_effort(
 y.eff.segdata <- y.eff[[1]]
 y.eff.siteinfo <- y.eff[[2]]
 y.eff.randpicks <- y.eff[[3]]
+
+# Chop and summarize effort using "condition" method
+y.eff.cond <- airdas_effort(
+  y.proc, method = "condition", sp.codes = c("mn", "bm"), 
+  seg.km.min = 0.05
+)
 ```
 
 You can also check that your AirDAS data has accepted formatting and values:
