--- a/README.Rmd
+++ b/README.Rmd
@@ -42,31 +42,31 @@ You can [download the PDF](https://github.com/smwoodman/swfscAirDAS/blob/master/
 First, you must read and process the AirDAS data
 
 ```{r example}
-# library(swfscAirDAS)
-# # Get file paths of sample files included in the package
-# y <- system.file("airdas_sample.das", package = "swfscAirDAS")
-# y.eff.randpicks <- system.file("airdas_sample_randpicks.csv", package = "swfscAirDAS")
-# 
-# # Read and process AirDAS file, i.e. read AirDAS data into a data frame and add info columns
-# y.read <- airdas_read(y)
-# y.proc <- airdas_process(y.read)
-# 
-# # Alternatively, the file path can be passed directly to airdas_process
-# y.proc <- airdas_process(y)
+library(swfscAirDAS)
+# Get file paths of sample files included in the package
+y <- system.file("airdas_sample.das", package = "swfscAirDAS")
+y.eff.randpicks <- system.file("airdas_sample_randpicks.csv", package = "swfscAirDAS")
+
+# Read and process AirDAS file, i.e. read AirDAS data into a data frame and add info columns
+y.read <- airdas_read(y)
+y.proc <- airdas_process(y.read)
+
+# Alternatively, the file path can be passed directly to airdas_process
+y.proc <- airdas_process(y)
 ```
 
 Note that `airdas_read` can read multiple files simultaneously
 
 ```{r}
-# y.read.mult <- airdas_read(c(y, y))
+y.read.mult <- airdas_read(c(y, y))
 ```
 
 After processing, you can summarize the processed AirDAS data. There are two available methods for chopping and summarizing effort: "equallength" and "condition". The method "equallength" chops continuous effort sections into equal length effort (modeling) segments, while the method "condition" chops continuous effort sections in segments every time a condition changes. 
 
 ```{r}
-# # Summarize sighting information
-# y.sight <- airdas_sight(y.proc)
-# 
+# Summarize sighting information
+y.sight <- airdas_sight(y.proc)
+
 # # Chop and summarize effort using "equallength" method
 # y.eff <- airdas_effort(
 #   y.proc, method = "equallength", sp.codes = c("mn", "bm"), 
