--- a/vignettes/swfscAirDAS.Rmd
+++ b/vignettes/swfscAirDAS.Rmd
@@ -35,7 +35,8 @@ head(readLines(y))
 
 The first step in processing AirDAS data is to ensure that the DAS file has expected formatting and values, which you can do using the `airdas_check` function. The checks performed by this function are detailed in the function documentation, which can be accessed by running `?airdas_check`. If you aren't sure of the file type (format) of your data, you can check the format PDFs. These PDFs are available online at https://smwoodman.github.io/swfscAirDAS/, or see `?airdas_format_pdf` for how to access a local copy.
 
-```{r check}
+```{r check, eval=FALSE}
+# Code not run
 y.check <- airdas_check(y, file.type = "turtle", skip = 0, print.transect = TRUE)
 ```
 
