--- a/README.Rmd
+++ b/README.Rmd
@@ -51,4 +51,4 @@ swfscAirDAS accepts AirDAS data from several different programs, and thus in sev
 
 These PDFs are also included in the package; see [`airdas_format_pdf`](https://smwoodman.github.io/swfscAirDAS/reference/airdas_format_pdf.html) for more details.
 
-In addition, the package contains the function [`airdas_check`](https://smwoodman.github.io/swfscAirDAS/reference/airdas_check.html), which checks whether the provided file adheres to expected format of the provided file type. This function is designed to 1) be used for data QA/QC after performing a survey and 2) ensure the data format meets all of the assumptions made by the rest of the functions in the packge. A PDF describing the format checks is included in the package; you can also [`download the PDF here`](https://github.com/smwoodman/swfscAirDAS/blob/master/inst/AirDAS_check.pdf)
+In addition, the package contains the function [`airdas_check`](https://smwoodman.github.io/swfscAirDAS/reference/airdas_check.html), which checks whether the provided file adheres to expected format of the provided file type. This function is designed to 1) be used for data QA/QC after performing a survey and 2) ensure the data format meets all of the assumptions made by the rest of the functions in the package. A PDF describing the format checks is included in the package; you can also [`download the PDF here`](https://github.com/smwoodman/swfscAirDAS/blob/master/inst/AirDAS_check.pdf)
